--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,18 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1000px;
+}
+
+@media (min-width: 767px) {
+  .container {
+    width: 80%;
+  }
 }
