--- a/src/reset.css
+++ b/src/reset.css
@@ -16,17 +16,18 @@ p {
   font-size: .95em;
   margin: 0 0 1em 0;
 }
-h2,
-h3,
-a {
-  color: #093a58;
-}
+/*h2,*/
+/*h3,*/
+/*a {*/
+  /*color: #093a58;*/
+/*}*/
 h2,
 h3 {
   margin: 0 0 .8em 0;
 }
 a {
   text-decoration: none;
+  color: #fff;
 }
 img {
   max-width: 100%;
