--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Space+Mono');
 
 body {
   margin: 0;
@@ -7,12 +8,18 @@ body {
 }
 
 .container {
+  padding-left: .5em;
+  padding-right: .5em;
   margin: 0 auto;
-  max-width: 1000px;
+  max-width: 1250px;
+}
+
+a { 
+  color: #C52025;
 }
 
 @media (min-width: 767px) {
   .container {
-    width: 80%;
+    width: 90%;
   }
 }
