Update body in Home to be small

--- a/src/components/Pages/Home.module.css
+++ b/src/components/Pages/Home.module.css
@@ -29,8 +29,10 @@
 }
 
 .container {
-  min-height: 100vh;
-  padding: 0 1em;
+  /* min-height: 100vh; */
+  padding-left: 1em;
+  padding-right: 1em;
+  padding-bottom: 2.25em;
 }
 
 .body {
