--- a/src/components/Pages/Home/Home.module.css
+++ b/src/components/Pages/Home/Home.module.css
@@ -7,7 +7,7 @@
 }
 
 .heading {
-  background: url("../../images/code.png") no-repeat center center;
+  background: url("../../../images/code.png") no-repeat center center;
   background-size: cover;
   display: flex;
   font-family: 'Space Mono', monospace;
@@ -41,8 +41,14 @@
   text-align: left;
 }
 
-.projectList {
-  list-style: inside;
+.gallery, .gallery > div {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.gallery > div {
+  flex-grow: 1;
 }
 
 @media (min-width: 767px) {
@@ -63,5 +69,28 @@
   .body {
     margin: 0 auto;
     width: 90%;
+  }
+
+  .gallery, .gallery > div {
+    flex-direction: row;
+  }
+
+  .gallery {
+    justify-content: center;
+    height: 250px;
+  }
+
+  .gallery > div {
+    max-width: 250px;
+    border: #000 1px solid;
+    margin: 0 2em;
+    border-radius: 15px;
+  }
+
+  .gallery > div a {
+    padding-bottom: .5em;
+    margin-top: auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
