Fix GalleryItem margin not matching body

--- a/src/components/Pages/Home/GalleryItem.module.css
+++ b/src/components/Pages/Home/GalleryItem.module.css
@@ -5,7 +5,7 @@
   text-align: center;
   border: #000 1px solid;
   color: #fff;
-  margin: 1em;
+  margin: 1em 0;
   border-radius: 15px;
   overflow: hidden;
   height: 15em;
